<?xml version="1.0"?>
<package format="2">
  <name>gcode_processor</name>
  <version>0.0.1</version>
  <description>The gcode_processor package</description>

  <maintainer email="max@svenzva.com">maxwell</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
